bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:4: error: type mismatch;
 found   : Unit
 required: Boolean
   if (weekday) {return false}
   ^